Upgrade build dependencies and configurations to work on Java 25
There are some new warnings related to agent loading, deprecations,
changes to bytecode generation, etc.

Some changes will have to be revisited after migration is complete.

Issue: n/a